tests/system/testdata/manifest/apply.txtar
# Graceful handling of a nonexistent manifest file.
ak manifest apply nonexistent.yaml
output equals 'Error: open nonexistent.yaml: no such file or directory'
return code == 10

# Graceful handling of an invalid manifest file.
ak manifest apply invalid.yaml
output equals file invalid_error.txt
return code == 1

# Successful application of an empty plan.
ak manifest apply empty.yaml
return code == 0
output equals ''

# Successful application of a full project.
ak manifest apply full.yaml
return code == 0
output equals file expected_on_full_apply.txt

# Check the actual project details.
ak project get my_project -J
return code == 0
output equals file expected_project_details.json

ak project get prj_00000000000000000000000001 -J
return code == 0
output equals file expected_project_details.json

# Check the actual connection details.
ak connection get my_project/my_connection -J
return code == 0
output equals file expected_connection_details.json

# TODO: Add more tests - either here, or in separate `.txtar` files:  
# - Specifying an env name  
# - This command's flags  
# - Other manifest commands since PR #6  
ak connection get con_00000000000000000000000002 -J
return code == 0
output equals file expected_connection_details.json


# Check the actual trigger details.
ak trigger get trg_00000000000000000000000003 -J
return code == 0
output equals file expected_trigger1_details.json

ak trigger get trg_00000000000000000000000004 -J
return code == 0
output equals file expected_trigger2_details.json

ak manifest apply full.yaml --project-name their_project
return code == 0
output equals file expected_on_full_apply_their.txt

# Graceful handling of an manifest file with unknown integration.
ak manifest apply wrong_integration.yaml
output equals file wrong_integration_error.txt
return code == 1


-- invalid.yaml --
This is an invalid YAML file to trigger an error

-- invalid_error.txt --
Error: yaml: unmarshal errors:
  line 1: cannot unmarshal !!str `This is...` into manifest.Manifest

-- empty.yaml --
version: v1

-- wrong_integration.yaml --
version: v1

project:
  name: my_telepathy_project
  connections:
    - name: my_connection
      # This integration does not exist, obviously.
      integration: telepathy
  triggers:
    - name: read
      connection: my_connection
      event_type: read
      call: my_program.star:on_mind_read

-- wrong_integration_error.txt --
[plan] project "my_telepathy_project": not found, will create
[plan] connection "my_telepathy_project/my_connection": not found, will create
[plan] trigger "my_telepathy_project:connection:my_telepathy_project/my_connection/read": not found, will create
[exec] create_project "my_telepathy_project": prj_0000000000000000000000000b created
Error: action create_connection my_telepathy_project/my_connection: integration "telepathy" not found

-- full.yaml --
version: v1

project:
  name: my_project
  connections:
    - name: my_connection
      integration: test
  triggers:
    - name: test
      connection: my_connection
      call: my_program.star:on_test
    - name: get
      type: webhook
      event_type: get
      call: my_program.star:on_http_get

-- expected_on_full_apply.txt --
[plan] project "my_project": not found, will create
[plan] connection "my_project/my_connection": not found, will create
[plan] trigger "my_project:connection:my_project/my_connection/test": not found, will create
[plan] trigger "my_project:/get": not found, will create
[exec] create_project "my_project": prj_00000000000000000000000001 created
[exec] create_connection "my_project/my_connection": con_00000000000000000000000002 created
[exec] create_trigger "my_project:connection:my_project/my_connection/test": trg_00000000000000000000000003 created
[exec] create_trigger "my_project:/get": trg_00000000000000000000000004 created

-- expected_on_full_apply_their.txt --
[plan] project "their_project": not found, will create
[plan] connection "their_project/my_connection": not found, will create
[plan] trigger "their_project:connection:their_project/my_connection/test": not found, will create
[plan] trigger "their_project:/get": not found, will create
[exec] create_project "their_project": prj_00000000000000000000000006 created
[exec] create_connection "their_project/my_connection": con_00000000000000000000000007 created
[exec] create_trigger "their_project:connection:their_project/my_connection/test": trg_00000000000000000000000008 created
[exec] create_trigger "their_project:/get": trg_00000000000000000000000009 created

-- expected_project_details.json --
{
  "project": {
    "project_id": "prj_00000000000000000000000001",
    "name": "my_project",
    "owner_id": "usr_3kthzvm101aadc4f3845e391e1"
  }
}

-- expected_connection_details.json --
{
  "connection": {
    "connection_id": "con_00000000000000000000000002",
    "integration_id": "int_3kth00testaf9d33c5697341f0",
    "project_id": "prj_00000000000000000000000001",
    "name": "my_connection",
    "status": {},
    "capabilities": {},
    "links": {
      "self_url": "/connections/con_00000000000000000000000002"
    }
  }
}

-- expected_trigger1_details.json --
{
  "trigger": {
    "trigger_id": "trg_00000000000000000000000003",
    "name": "test",
    "source_type": "SOURCE_TYPE_CONNECTION",
    "project_id": "prj_00000000000000000000000001",
    "code_location": {
      "path": "my_program.star",
      "name": "on_test"
    },
    "connection_id": "con_00000000000000000000000002"
  }
}

-- expected_trigger2_details.json --
{
  "trigger": {
    "trigger_id": "trg_00000000000000000000000004",
    "name": "get",
    "source_type": "SOURCE_TYPE_WEBHOOK",
    "project_id": "prj_00000000000000000000000001",
    "event_type": "get",
    "code_location": {
      "path": "my_program.star",
      "name": "on_http_get"
    },
    "webhook_slug": "00000000000000000000000005"
  }
}
